--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "nodemon": "^1.18.9",
     "path": "^0.12.7",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0"
